build: 6.6.1 배포 JAR 산출
version 을 6.6.1 로 올려 파일명이 맞게 나오게 하고 MANIFEST 에 버전·호환 대상을 박음. lib/ 에 6.6.1 추가